--- a/report.html
+++ b/report.html
@@ -186,8 +186,11 @@ summary {
 
 <p>intention: to simulate report</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  0.0344060  1.0637687  2.0695815 -1.5217375  1.1261432  0.2425719
-##  [7] -0.3116887 -0.5368976  1.0298176 -1.1234006</code></pre>
+<pre><code>##  [1] -1.55384035 -0.86138900 -1.00929927 -1.25253318 -0.02962694
+##  [6] -1.14667292 -1.35792955 -1.42452153  0.47597103  0.39758447</code></pre>
+<pre class="r"><code>x = &quot;hello&quot;
+print(x)</code></pre>
+<pre><code>## [1] &quot;hello&quot;</code></pre>
 
 
 
